# shellscan-sdk

./: LICENSE  README.md  pyproject.toml
src/shellscan/: __init__.py  cli.py
tests/skills/known-malicious/backdoor-skill/: SKILL.md  process.py
tests/skills/known-malicious/obfuscation-skill/: SKILL.md  encode.py
tests/skills/known-malicious/sqli-traversal-skill/: SKILL.md  query.py
tests/skills/known-safe/: calculator-skill.md  weather-skill.md
