[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellscan"
version = "0.1.0"
description = "CLI and client SDK for ShellScan — security scanning for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentic Studio Labs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.scripts]
shellscan = "shellscan.cli:main"

[project.urls]
Homepage = "https://github.com/Agentic-Studio-Labs/shellscan-sdk"
Issues = "https://github.com/Agentic-Studio-Labs/shellscan-sdk/issues"
